--- a/Msafe/MSafe/res/layout/grid_item_first_main.xml
+++ b/Msafe/MSafe/res/layout/grid_item_first_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp"
+    android:layout_marginBottom="@dimen/padding_list"
     android:orientation="vertical"
     android:background="@null" >
 
@@ -11,15 +11,16 @@
         android:text="@string/grid_item_check0"
         android:layout_width="fill_parent"
         android:gravity="center_horizontal"
+        android:textSize="@dimen/main_scan_title_size"
+        android:textColor="@color/white"
         android:layout_height="wrap_content" />
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dip"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/white" />
+        android:layout_height="@dimen/divider_height_half"
+        android:layout_marginTop="@dimen/padding_list"
+        android:layout_marginRight="@dimen/main_scan_padding"
+        android:layout_marginLeft="@dimen/main_scan_padding"
+        android:background="@color/white_apha" />
 
 </LinearLayout>
