--- a/Msafe/MSafe/res/layout/virvusadmin.xml
+++ b/Msafe/MSafe/res/layout/virvusadmin.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
+                android:src="@drawable/main_scan_wow" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
+                android:src="@drawable/main_scan_wow" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
+                android:src="@drawable/main_scan_wow" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/image_exclam" />
+                android:src="@drawable/main_scan_wow" />
 
             <TextView
                 android:layout_width="wrap_content"
