--- a/Msafe/MSafe/res/values/colors.xml
+++ b/Msafe/MSafe/res/values/colors.xml
@@ -6,12 +6,14 @@
     <color name="white_mainlayout_background">#ffffff</color>
     <color name="white_textcolor">#ffffff</color>
     <color name="green_breathecircleview_background">#34B862</color>
+    <color name="green_breathecircleview_background_apha">#00000000</color>
     <color name="gray_mainactivity_btn_press">#d7d7d7</color>
     <color name="rubbishclear_bg">#aaf49c</color>
     <color name="radar_outcircle_color">#D1FFD4</color>
     <color name="radar_inner_color">#C9FFCC</color>
     <color name="black">#000000</color>
     <color name="tab_textcolor_selected">#81fa87</color>
-     <color name="white_apha">#99fafafa</color>
+    <color name="white_apha">#99fafafa</color>
+    <color name="red">#FF0000</color>
 
 </resources>
