--- a/Msafe/MSafe/res/values/colors.xml
+++ b/Msafe/MSafe/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="green_breathecircleview_background">#34B862</color>
     <color name="green_breathecircleview_background_apha">#00000000</color>
     <color name="gray_mainactivity_btn_press">#d7d7d7</color>
-    <color name="rubbishclear_bg">#aaf49c</color>
+    <color name="rubbishclear_bg">#10C866</color>
     <color name="radar_outcircle_color">#D1FFD4</color>
     <color name="radar_inner_color">#C9FFCC</color>
     <color name="black">#000000</color>
